Fixed 'range-slider' block: made the effect of dragging sliders to be smooth; fixed jumping of values when quickly dragging sliders; removed default sliders from styles and added to script; fixed 'running away' of sliders from the cursor

--- a/project.blocks/range-slider/range-slider.scss
+++ b/project.blocks/range-slider/range-slider.scss
@@ -26,8 +26,6 @@
     z-index: 0;
   }
   &__limit {
-    &_left { margin-left: 76px }
-    &_right { margin-right: 31px }
     &_left, &_right { z-index: 2 }
   }
   &__point {
